# CPP-SDL2

./: README.md
particles/: CMakeLists.txt
particles/include/: Particle.h  Screen.h  Swarm.h
particles/src/: Main.cpp  Particle.cpp  Screen.cpp  Swarm.cpp
